[workspace]
members = [
	"rusty-bot",
	"rusty-commands",
	"rusty-core",
	"rusty-database",
	"rusty-utils",
]
default-members = ["rusty-bot"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0"
dotenvy = "0.15"
rustls = { version = "0.23", features = ["ring"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
twilight-gateway = "0.17"
twilight-http = "0.17"
twilight-interactions = "0.17.0"
twilight-model = "0.17"
twilight-util = { version = "0.17.0", features = ["builder"] }
rusty-bot = { path = "rusty-bot" }
rusty-commands = { path = "rusty-commands" }
rusty-core = { path = "rusty-core" }
rusty-database = { path = "rusty-database" }
rusty-utils = { path = "rusty-utils" }
