[package]
name = "rusty-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
dotenvy = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
twilight-gateway = { workspace = true }
twilight-http = { workspace = true }
twilight-model = { workspace = true }
rusty-commands = { workspace = true }
rusty-core = { workspace = true }
